--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
       </div>
       <div class="contact-form" >
-        <form action="https://formsubmit.co/akamifox943@email.com" method="POST">
+        <form action="https://formsubmit.co/akamifox943@gmail.com" method="POST">
           <input type="text" name="name" id="name" class="name" placeholder="Your Name" required>
           <input type="text" name ="mail" id="mail" class="email" placeholder="Your Email Adress" required>
           <input type="text" name="phone" id="subject" class="subject" placeholder="Your Mobile Number" required>
