--- a/index.html
+++ b/index.html
@@ -125,12 +125,13 @@
         </div>
       </div>
       <div class="contact-form" >
-        <form action="https://formsubmit.co/akamifox943@gmail.com" method="POST">
+        <form action="https://formsubmit.co/backenddevjob@gmail.com" method="POST">
           <input type="text" name="name" id="name" class="name" placeholder="Your Name" required>
           <input type="text" name ="mail" id="mail" class="email" placeholder="Your Email Adress" required>
           <input type="text" name="phone" id="subject" class="subject" placeholder="Your Mobile Number" required>
           <textarea  type="text" name="message" id="message" cols="35" rows="10" placeholder="How Can I Help You" required></textarea>
           <button type="submit" value="Send" class="btn btn-primary" name="send" required>Send Message</button>
+          <input type="hidden" name="_next" value="https://portfolio-personal-cntk.onrender.com/">
         </form>
       </div>
     </section>
